--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,3 @@
 {
-    "version": 2,
-    "builds": [
-        {
-            "src": "index.js",
-            "use": "@vercel/node"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/api/sendMessage",
-            "dest": "/index.js"
-        }
-    ]
+    "version": 2
 }
